partial create consulta (#18)